2016-09-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* amar-src/amarchiver.c: Cast amar-size result ot (long long)

2016-09-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/FetchDump.pm: Print to STDERR
	* amar-src/amar.c: Improve error message
	* amar-src/amar.h (amar_record): New prototype
	* amar-src/amarchiver.c (do_list): Print the size of the archive
	* perl/Amanda/Archive.swg (amar_record): Swig it

2016-09-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amrandom.pl: Do not check the device, set
	  size_level_1
	* common-src/shm-ring.c (cleanup_shm_ring, close_producer_shm_ring,
	  close_consumer_shm_ring): Close the shm memory

2016-09-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Restore.pm: Fix call to remove_for_restore_label and
	  remove_for_restore_holding

2016-09-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/shm-ring.c (cleanup_shm_ring): Use name without path

2016-09-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/device.c (default_device_property_set_ex): Return the
	  device error if it is set
	* device-src/s3-device.c (s3_device_set_use_subdomain_fn):
	  Improve error message
	* installcheck/Amanda_Device.pl: Test non DNS bucket name

2016-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Process.pm: Typo

2016-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/*.pl: Make sure they all log their results

2016-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: fix

2016-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: Log a 'STATS hostname' line
	* perl/Amanda/Report.pm: Parse the amvault 'STATS hostname' line
	* perl/Amanda/Report/json.pm: Always include the head section
	* installcheck/Amanda_Rest_Runs.pl: Add head section
	* installcheck/catalogs/bigestimate.cat,
	  installcheck/catalogs/doublefailure.cat,