@@ -1,4 +1,8 @@
 2016-09-13  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* installcheck/amarchiver.pl: Fix for size output
+	* amar-src/amar-test.c: Fix for improved error message
+
+2016-09-13  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* amar-src/amarchiver.c: Cast amar-size result ot (long long)
 
 2016-09-13  Jean-Louis Martineau <JMartineau@carbonite.com>
